--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /viikko2/Verkkokauppa1/build/
 /viikko3/nhlreader/.nb-gradle/
 /viikko3/HelloCucumber/build/
+/viikko3/LoginCucumber/.gradle/
+/viikko3/LoginCucumber/build/
