--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /viikko4/Verkkokauppa1/build/
 /viikko4/IntJoukkoSovellus/build/
 /viikko4/Tennis/build/
+/viikko5/LaskinFX11/.gradle/
+/viikko5/LaskinFX11/build/
