--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /viikko4/Tennis/build/
 /viikko5/LaskinFX11/.gradle/
 /viikko5/LaskinFX11/build/
+/viikko6/QueryLanguage/build/
+/viikko6/QueryLanguage/.gradle/
